# rust-redis-stack-vectordb

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
examples/: deletion.rs  distributed_vector_search.rs  embedding_driver.rs
src/: config.rs  error.rs  gcs.rs  google_embedding_driver.rs  lib.rs  models.rs  redis_engine.rs  redis_vector_store_driver.rs
tests/: integration_test.rs
