[package]
name = "redis_vector_store"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of a vector store using Redis"

[dependencies]
redis = { version = "0.23.0", features = ["json", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["v5"] }
byteorder = "1.4.3"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
cloud-storage = "0.11.0"
thiserror = "1.0.40"
async-trait = "0.1.68"
bytes = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"

[lib]
name = "redis_vector_store"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "example/"

[[example]]
name = "distributed_vector_search"
path = "examples/distributed_vector_search.rs"

[[example]]
name = "embedding_driver"
path = "examples/embedding_driver.rs"
