[package]
name = "redis_vector_store"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of a vector store using Redis"

[dependencies]
redis = { version = "1", features = ["json", "tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v5"] }
byteorder = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"

[lib]
name = "redis_vector_store"
path = "src/lib.rs"

[[example]]
name = "distributed_vector_search"
path = "examples/distributed_vector_search.rs"

[[example]]
name = "embedding_driver"
path = "examples/embedding_driver.rs"

[[example]]
name = "deletion"
path = "examples/deletion.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
